# GitBoost

./: 01_GitBoost_기획서.md  02_GitBoost_에이전트_프롬프트.md  README.md  progress.md
.github/workflows/: release.yml
gitboost/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  build.rs
gitboost/.github/workflows/: ci.yml  release.yml
gitboost/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  orchestrator.rs  prereq.rs
gitboost/src/auth/: device_flow.rs  gh_cli.rs  keyring_storage.rs  mod.rs
gitboost/src/generator/: gitignore.rs  license.rs  mod.rs  readme.rs
gitboost/src/generator/templates/: apache-2.0.txt  bsd-3-clause.txt
gitboost/src/git_ops/: credential.rs  mod.rs  runner.rs
gitboost/src/github/: mod.rs  models.rs  repos.rs
gitboost/src/ui/: mod.rs  prompt.rs
gitboost/tests/: cli_smoke.rs
