[package]
name = "gitboost"
version = "0.1.3"
edition = "2021"
rust-version = "1.75"
description = "Zero-config CLI to create a local + GitHub repo in one command"
license = "MIT"
repository = "https://github.com/kjw2/GitBoost"
keywords = ["git", "github", "cli", "automation", "scaffold"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gitboost"
path = "src/main.rs"

[lib]
name = "gitboost"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
keyring = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
owo-colors = { version = "4", features = ["supports-colors"] }
dialoguer = { version = "0.11", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
webbrowser = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
